offloading thesis to offsite

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1213,5 +1213,42 @@ issn = {0550-3213},
 doi = {https://doi.org/10.1016/0550-3213(74)90154-0},
 url = {https://www.sciencedirect.com/science/article/pii/0550321374901540},
 author = {G.'t Hooft},
-abstract = {A gauge theory with colour gauge group U(N) and quarks having a colour index running from one to N is considered in the limit N → ∞, g2N fixed. It is shown that only planar diagrams with the quarks at the edges dominate; the topological structure of the perturbation series in 1/N is identical to that of the dual models, such that the number 1/N corresponds to the dual coupling constant. For hadrons N is probably equal to three. A mathematical framework is proposed to link these concepts of planar diagrams with the functional integrals of Gervais, Sakita and Mandelstam for the dual string.}
+abstract = {A gauge theory with colour gauge group U(N) and quarks having a colour index running from one to N is considered in the limit N → ∞, g2N fixed. It is shown that only planar diagrams with the quarks at the edges dominate; the topological structure of the perturbation series in 1/N is identical to that of the dual models, such that the number 1/N corresponds to the dual coupling constant. For hadrons N is probably equal to three. A mathematical framework is proposed to link these concepts of planar diagrams with the functional integrals of Gervais, Sakita and Mandelstam for the dual string.},
+}
+@misc{https://doi.org/10.48550/arxiv.0802.1043,
+  doi = {10.48550/ARXIV.0802.1043},
+  
+  url = {https://arxiv.org/abs/0802.1043},
+  
+  author = {Rosner, Jonathan L. and Stone, Sheldon},
+  
+  keywords = {High Energy Physics - Experiment (hep-ex), High Energy Physics - Phenomenology (hep-ph), FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = {Decay Constants of Charged Pseudoscalar Mesons},
+  
+  publisher = {arXiv},
+  
+  year = {2008},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license},
+}
+@article{aaij2013first,
+  title={First Observation of C P Violation in the Decays of B s 0 Mesons},
+  author={Aaij, R and Beteta, C Abellan and Adeva, B and Adinolfi, M and Adrover, C and Affolder, A and Ajaltouni, Z and Albrecht, J and Alessio, F and Alexander, M and others},
+  journal={Physical review letters},
+  volume={110},
+  number={22},
+  pages={221601},
+  year={2013},
+  publisher={APS}
+}
+@article{aaij2019observation,
+  title={Observation of C P violation in charm decays},
+  author={Aaij, Roel and Beteta, C Abell{\'a}n and Adeva, Bernardo and Adinolfi, Marco and Aidala, Christine Angela and Ajaltouni, Ziad and Akar, Simon and Albicocco, Pietro and Albrecht, Johannes and Alessio, Federico and others},
+  journal={Physical review letters},
+  volume={122},
+  number={21},
+  pages={211803},
+  year={2019},
+  publisher={APS}
 }
