offloading thesis to offsite

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1252,3 +1252,17 @@ abstract = {A gauge theory with colour gauge group U(N) and quarks having a colo
   year={2019},
   publisher={APS}
 }
+@article{PhysRevLett.97.131801,
+  title = {Improved Experimental Limit on the Electric Dipole Moment of the Neutron},
+  author = {Baker, C. A. and Doyle, D. D. and Geltenbort, P. and Green, K. and van der Grinten, M. G. D. and Harris, P. G. and Iaydjiev, P. and Ivanov, S. N. and May, D. J. R. and Pendlebury, J. M. and Richardson, J. D. and Shiers, D. and Smith, K. F.},
+  journal = {Phys. Rev. Lett.},
+  volume = {97},
+  issue = {13},
+  pages = {131801},
+  numpages = {4},
+  year = {2006},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.97.131801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.97.131801}
+}
